deployments/k8s/overlays/dev/patch-notificationapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationapi
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: notificationapi
          image: docker.io/01092002/go-rabbitmq-notification-api:dev
          imagePullPolicy: Always
