deployments/k8s/overlays/dev/patch-notificationworker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationworker
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: notificationworker
          image: docker.io/01092002/go-rabbitmq-notification-worker:dev
          imagePullPolicy: Always
