deployments/k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notificationapi-ingress
spec:
  rules:
    - host: notificationapi.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notificationapi
                port:
                  number: 3000
